[gd_scene load_steps=11 format=3 uid="uid://ufiy48epm80m"]

[ext_resource type="Script" path="res://UI/Menues/Skripts/settings_menu.gd" id="1_d2yve"]
[ext_resource type="Texture2D" uid="uid://bryejuohsdw34" path="res://UI/Images/Background.png" id="1_yeuuw"]
[ext_resource type="FontFile" uid="uid://c0ij43l2fym11" path="res://UI/Images/Pixellari.ttf" id="2_yspgn"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_l0mdf"]
texture = ExtResource("1_yeuuw")
modulate_color = Color(0.572988, 0.572988, 0.572988, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vcloh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hjk1x"]
bg_color = Color(0.756863, 0.631373, 0.458824, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pupmr"]
bg_color = Color(0.564706, 0.454902, 0.298039, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_svphe"]
bg_color = Color(0.909804, 0.831373, 0.72549, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ckbk3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_233r8"]
bg_color = Color(0.909804, 0.831373, 0.72549, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_d2yve")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_l0mdf")

[node name="Label" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -382.0
offset_top = -1.0
offset_right = 128.0
offset_bottom = 138.0
grow_horizontal = 2
scale = Vector2(1.5, 1.5)
theme_override_colors/font_color = Color(0.76412, 0.544499, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/outline_size = 7
theme_override_constants/shadow_outline_size = 10
theme_override_fonts/font = ExtResource("2_yspgn")
theme_override_font_sizes/font_size = 64
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Back" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -161.0
offset_top = 17.0
offset_right = -27.0
offset_bottom = 59.0
grow_horizontal = 0
size_flags_vertical = 3
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_yspgn")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_vcloh")
theme_override_styles/hover = SubResource("StyleBoxFlat_hjk1x")
theme_override_styles/pressed = SubResource("StyleBoxFlat_pupmr")
theme_override_styles/normal = SubResource("StyleBoxFlat_svphe")
text = "Go back"

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -177.0
offset_top = -98.0
offset_right = 177.0
offset_bottom = 230.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="TTS" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("2_yspgn")
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxEmpty_ckbk3")
theme_override_styles/hover = SubResource("StyleBoxFlat_233r8")
theme_override_styles/pressed = SubResource("StyleBoxFlat_pupmr")
theme_override_styles/normal = SubResource("StyleBoxFlat_svphe")
toggle_mode = true
button_pressed = true

[node name="RichTextLabel" type="RichTextLabel" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_colors/default_color = Color(0.764706, 0.545098, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("2_yspgn")
theme_override_font_sizes/normal_font_size = 30
text = "Volume"
fit_content = true

[node name="HSlider" type="HSlider" parent="Panel/VBoxContainer"]
layout_mode = 2
min_value = -100.0
max_value = 0.0

[connection signal="pressed" from="Panel/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/TTS" to="." method="_on_tts_pressed"]
[connection signal="drag_ended" from="Panel/VBoxContainer/HSlider" to="." method="_on_h_slider_drag_ended"]
[connection signal="value_changed" from="Panel/VBoxContainer/HSlider" to="." method="_on_h_slider_value_changed"]
